--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -2,24 +2,111 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.guddle.spring</groupId>
+  <groupId>com.guddle</groupId>
   <artifactId>spring-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>spring-demo</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <dependencies>  
+        <dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-context</artifactId>  
+            <version>4.1.0.RELEASE</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-orm</artifactId>  
+            <version>4.1.0.RELEASE</version>  
+        </dependency>  
+  
+        <dependency>  
+            <groupId>org.springframework</groupId>  
+            <artifactId>spring-webmvc</artifactId>  
+            <version>4.1.0.RELEASE</version>  
+        </dependency>  
+  
+        <dependency>  
+            <groupId>org.hibernate</groupId>  
+            <artifactId>hibernate-core</artifactId>  
+            <version>4.3.6.Final</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.hibernate</groupId>  
+            <artifactId>hibernate-entitymanager</artifactId>  
+            <version>4.3.6.Final</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.data</groupId>  
+            <artifactId>spring-data-jpa</artifactId>  
+            <version>1.7.0.RELEASE</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>mysql</groupId>  
+            <artifactId>mysql-connector-java</artifactId>  
+            <version>5.1.32</version>  
+        </dependency>  
+  
+        <dependency>  
+            <groupId>com.alibaba</groupId>  
+            <artifactId>druid</artifactId>  
+            <version>1.0.9</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>com.alibaba</groupId>  
+            <artifactId>fastjson</artifactId>  
+            <version>1.1.41</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>commons-fileupload</groupId>  
+            <artifactId>commons-fileupload</artifactId>  
+            <version>1.3.1</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>junit</groupId>  
+            <artifactId>junit-dep</artifactId>  
+            <version>4.11</version>  
+            <scope>test</scope>  
+        </dependency>  
+        <dependency>  
+            <groupId>javax.servlet.jsp.jstl</groupId>  
+            <artifactId>javax.servlet.jsp.jstl-api</artifactId>  
+            <version>1.2.1</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.glassfish.web</groupId>  
+            <artifactId>jstl-impl</artifactId>  
+            <version>1.2</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.apache.commons</groupId>  
+            <artifactId>commons-lang3</artifactId>  
+            <version>3.3.2</version>  
+        </dependency>  
+    </dependencies>  
+    <build>  
+        <plugins>  
+            <plugin>  
+                <artifactId>maven-compiler-plugin</artifactId>  
+                <version>2.3.2</version>  
+                <configuration>  
+                    <source>1.6</source>  
+                    <target>1.6</target>  
+                </configuration>  
+            </plugin>  
+            <plugin>  
+                <artifactId>maven-war-plugin</artifactId>  
+                <version>2.2</version>  
+                <configuration>  
+                    <version>3.0</version>  
+                    <failOnMissingWebXml>false</failOnMissingWebXml>  
+                </configuration>  
+            </plugin>  
+        </plugins>  
+    </build>  
 </project>
