--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -87,7 +87,14 @@
             <groupId>org.apache.commons</groupId>  
             <artifactId>commons-lang3</artifactId>  
             <version>3.3.2</version>  
-        </dependency>  
+        </dependency>
+        <!-- Testing begin-->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.1.0.RELEASE</version>
+		</dependency>
+		<!-- Testing end -->  
     </dependencies>  
     <build>  
         <plugins>  
