--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -13,24 +13,26 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>  
+  <dependencies>
+  	<!-- Spring config -->  
         <dependency>  
             <groupId>org.springframework</groupId>  
             <artifactId>spring-context</artifactId>  
-            <version>4.1.0.RELEASE</version>  
+            <version>3.2.5.RELEASE</version>  
         </dependency>  
         <dependency>  
             <groupId>org.springframework</groupId>  
             <artifactId>spring-orm</artifactId>  
-            <version>4.1.0.RELEASE</version>  
+            <version>3.2.5.RELEASE</version>  
         </dependency>  
   
         <dependency>  
             <groupId>org.springframework</groupId>  
             <artifactId>spring-webmvc</artifactId>  
-            <version>4.1.0.RELEASE</version>  
+            <version>3.2.5.RELEASE</version>  
         </dependency>  
-  
+        
+   <!-- Hibernate config -->
         <dependency>  
             <groupId>org.hibernate</groupId>  
             <artifactId>hibernate-core</artifactId>  
@@ -40,23 +42,42 @@
             <groupId>org.hibernate</groupId>  
             <artifactId>hibernate-entitymanager</artifactId>  
             <version>4.3.6.Final</version>  
-        </dependency>  
+        </dependency>
+        <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>4.3.6.Final</version>
+		</dependency>
+        
+        <!-- Spring jpa config -->  
         <dependency>  
             <groupId>org.springframework.data</groupId>  
             <artifactId>spring-data-jpa</artifactId>  
             <version>1.7.0.RELEASE</version>  
-        </dependency>  
+        </dependency>
+        <!-- DataBase config -->  
         <dependency>  
             <groupId>mysql</groupId>  
             <artifactId>mysql-connector-java</artifactId>  
             <version>5.1.32</version>  
         </dependency>  
-  
+        <dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.170</version>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc5</artifactId>
+			<version>11.2.0.1.0</version>
+		</dependency>
         <dependency>  
             <groupId>com.alibaba</groupId>  
             <artifactId>druid</artifactId>  
             <version>1.0.9</version>  
-        </dependency>  
+        </dependency>
+        
+        <!-- json jar  -->  
         <dependency>  
             <groupId>com.alibaba</groupId>  
             <artifactId>fastjson</artifactId>  
@@ -92,9 +113,15 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>4.1.0.RELEASE</version>
+			<version>3.2.5.RELEASE</version>
 		</dependency>
-		<!-- Testing end -->  
+		<!-- Testing end -->
+		<!-- Log -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+  			<artifactId>slf4j-log4j12</artifactId>
+  			<version>1.7.2</version>
+		</dependency>  
     </dependencies>  
     <build>  
         <plugins>  
