--- a/spring-demo/src/test/resources/application.test.properties
+++ b/spring-demo/src/test/resources/application.test.properties
@@ -1,5 +1,5 @@
-#db config
-jdbc_url = jdbc:h2:tcp://localhost/activiti
+#db config jdbc:h2:tcp://localhost/activiti
+jdbc_url = jdbc:h2:file:test;AUTO_SERVER=TRUE
 jdbc_username = sa
 jdbc_password = 
 jdbc.driver.dcits = org.h2.Driver
