--- a/spring-demo/src/main/webapp/WEB-INF/web.xml
+++ b/spring-demo/src/main/webapp/WEB-INF/web.xml
@@ -49,6 +49,15 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<!-- Spring security config -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<!-- Spring MVC Servlet -->
 	<servlet>
 		<servlet-name>springServlet</servlet-name>
