--- a/dcits-workflow/src/test/resources/application.test.properties
+++ b/dcits-workflow/src/test/resources/application.test.properties
@@ -1,10 +1,18 @@
 #db config
-jdbc.url.dcits = jdbc:h2:tcp://localhost/activiti
-jdbc.user.dcits = sa
-jdbc.password.dcits = 
-jdbc.driver.dcits = org.h2.Driver
+jdbc.url.dcits = jdbc:oracle:thin:@localhost:1521:orcl
+jdbc.user.dcits = dcwf
+jdbc.password.dcits = oracle
+jdbc.driver.dcits = oracle.jdbc.OracleDriver
+
+#dbcp config
 dbcp.maxActive.dcits = 20
 dbcp.maxIdle.dcits = 10
-hibernate.dialect = org.hibernate.dialect.H2Dialect
-#none,create,drop,update
+
+#hibernate config
+hibernate.dialect = org.hibernate.dialect.Oracle9Dialect
 hibernate.hbm2ddl.auto = none
+hibernate.show_sql = true
+hibernate.format_sql = true
+hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate-local.xml
