--- a/spring-demo/src/main/resources/db.properties
+++ b/spring-demo/src/main/resources/db.properties
@@ -1,10 +1,19 @@
 #mysql
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
-driverClassName=com.mysql.jdbc.Driver
-validationQuery=SELECT 1
-jdbc_url=jdbc:mysql://localhost:3308/test?useUnicode=true&characterEncoding=UTF-8
-jdbc_username=root
-jdbc_password=root
+#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#driverClassName=com.mysql.jdbc.Driver
+#validationQuery=SELECT 1
+#jdbc_url=jdbc:mysql://localhost:3308/test?useUnicode=true&characterEncoding=UTF-8
+#jdbc_username=root
+#jdbc_password=root
+
+#h2
+jdbc_url = jdbc:h2:file:test;AUTO_SERVER=TRUE
+jdbc_username = sa
+jdbc_password = 
+validationQuery = select 1
+hibernate.dialect = org.hibernate.dialect.H2Dialect
+#none,create,drop,update
+hibernate.hbm2ddl.auto = none
 
 hibernate.hbm2ddl.auto=none
 hibernate.show_sql=true
