--- a/dcits-workflow/src/main/resources/application.properties
+++ b/dcits-workflow/src/main/resources/application.properties
@@ -9,5 +9,10 @@ dbcp.maxActive.dcits = 20
 dbcp.maxIdle.dcits = 10
 
 #hibernate config
-hibernate.dialect = org.hibernate.dialect.H2Dialect
+hibernate.dialect = org.hibernate.dialect.Oracle9Dialect
 hibernate.hbm2ddl.auto = none
+hibernate.show_sql = false
+hibernate.format_sql = false
+hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.ejb.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+net.sf.ehcache.configurationResourceName = ehcache/ehcache-hibernate-local.xml
