--- a/dcits-workflow/src/main/resources/log4j.properties
+++ b/dcits-workflow/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=INFO, Console
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=[${project.artifactId}] %d %p [%t] %C.%M(%L) | %m%n
+log4j.appender.Console.layout.ConversionPattern=[dcits_workflow] %d %p [%t] %C.%M(%L) | %m%n
 
 #Project defalult level
 log4j.logger.com.dcits.demo=DEBUG
